--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -7,11 +7,9 @@ find_package(OpenCV REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBCAMERA REQUIRED libcamera)
 
-set(SOURCES
-    takephoto.cpp
-)
-
 include_directories(${LIBCAMERA_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
-add_executable(takephoto ${SOURCES})
+add_executable(takephoto takephoto.cpp)
+add_executable(takevideo takevideo.cpp)
 
 target_link_libraries(takephoto -llccv ${OpenCV_LIBS})
+target_link_libraries(takevideo -llccv ${OpenCV_LIBS})
